--- a/tos.html
+++ b/tos.html
@@ -54,9 +54,10 @@
         </section>
         <section id="important-notice">
             <h3>Important Notice</h3>
-            <p>We rely on 3rd party software such as <i><a href="https://www.hcaptcha.com/terms">Human Captcha(hcaptcha)</a></i> and
+            <p>We rely on 3rd party software such as <i><a href="https://www.hcaptcha.com/terms">Human
+                        Captcha(hcaptcha)</a></i> and
                 <i>Postmail</i> for functionality and
-                protection. By using our website you know knowingly agree to their Privacy Policy and Terms of Use as
+                protection. By using our website you knowingly agree to their Privacy Policy and Terms of Use as
                 well.
             </p>
         </section>
@@ -117,8 +118,7 @@
         </section>
         <hr>
         <footer>
-            <p>&copy;2021 MathFlare Co. Ltd. All rights reserved. - <a href="https://validator.w3.org/nu/">Validate this
-                    website</a> </p>
+            <p>&copy;2021 MathFlare Co. Ltd. - All rights reserved. - download the Terms of Service: <a href="Assets/mathflare-tos.pdf" download>PDF</a>, <a href="Assets/mathflare-tos.docx" download>DOCX</a>, <a href="Assets/mathflare-tos.txt" download>TXT</a></p>
         </footer>
     </div>
     <!-- TOS END -->
