fix: use proper phrasiology

--- a/carboncombustions.html
+++ b/carboncombustions.html
@@ -5,7 +5,7 @@
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MathFlare - Perfect Hydrocarbon Combustion</title>
+    <title>MathFlare - Complete Hydrocarbon Combustion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="MathFlare">
     <meta name="keywords"
@@ -43,7 +43,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white">Perfect Hydrocarbon Combustion</h1>
+        <h1 class="text-white">Complete Hydrocarbon Combustion</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off">
             <h4 class="text-white">Choose the bond type</h4>
@@ -70,7 +70,7 @@
         </div>
         <br>
         <div class="my-4">
-            <a href="https://www.google.com/search?q=calculate+perfect+carbon+combustion" target="_blank" rel="noopener"
+            <a href="https://www.google.com/search?q=calculate+complete+carbon+combustion" target="_blank" rel="noopener"
                 class="btn btn-outline-light">Find information on the web</a>
         </div>
     </div>
