fix: minor changes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="alert alert-dismissible fade show m-2 text-center" role="alert"
-        style="z-index: 99999999; background-color: #343A40;">
+        style="z-index: 999; background-color: #343A40;">
         Schedule and appointment and <a href="" target="_blank" rel="noopener" id="vacc-promo-link">get vaccinated
             today</a>!
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
