prod: added donation button

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
             <a href="https://github.com/mathflare/mathflare/issues" target="_blank" rel="noopener"
                 class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
+        <div>
+            <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="btn btn-primary m-2"
+                style="background-color: #0369B6 !important;" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                title="PayPal.me/mathflare">💲 Donate to MathFlare</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
