prod: fixed donate button

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                 class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
         <div>
-            <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="btn btn-primary m-2"
-                style="background-color: #0369B6 !important;" data-bs-toggle="tooltip" data-bs-placement="bottom"
-                title="PayPal.me/mathflare">💲 Donate to MathFlare</a>
+            <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="btn btn-outline-primary m-2"
+                data-bs-toggle="tooltip" data-bs-placement="bottom" title="PayPal.me/mathflare"><i
+                    class="bi bi-heart-fill" style="color: var(--bs-pink)"></i> Donate to MathFlare</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
