prod: updated funding methods

--- a/index.html
+++ b/index.html
@@ -68,9 +68,16 @@
                 class="btn btn-success m-1 btn-mobile"><i class="bi bi-lightbulb"></i> Suggest an Idea</a>
         </div>
         <div>
-            <a href="https://paypal.me/mathflare" target="_blank" rel="noopener" class="btn btn-outline-primary m-2"
-                data-bs-toggle="tooltip" data-bs-placement="bottom" title="PayPal.me/mathflare"><i
-                    class="bi bi-heart-fill" style="color: var(--bs-pink)"></i> Donate to MathFlare</a>
+            <div class="dropdown m-2">
+                <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton1"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    🍕Donate to MathFlare
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                    <li><a class="dropdown-item" href="https://paypal.me/mathflare" target="_blank" rel="noopener"><i class="bi bi-heart-fill" style="color: var(--bs-pink);"></i> PayPal</a></li>
+                    <li><a class="dropdown-item" href="https://buymeacoffee.com/mathflare" target="_blank" rel="noopener"><i class="bi bi-heart-fill" style="color: var(--bs-pink);"></i> Buymeacoffee</a></li>
+                </ul>
+            </div>
         </div>
     </div>
     <!-- SCRIPTS START -->
