fix: fixed broken links

--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -62,7 +62,9 @@
         <br>
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+sin" target="_blank" rel="noopener"
-                class="btn btn-outline-light">Find information on the web</a>
+                class="btn btn-outline-light m-2">Find information on the web</a>
+            <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
+                Trigonometric Numbers</a>
         </div>
         <hr style="width: 50%;">
         <form autocomplete="off">
@@ -82,7 +84,9 @@
         <br>
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+cos" target="_blank" rel="noopener"
-                class="btn btn-outline-light">Find information on the web</a>
+                class="btn btn-outline-light m-2">Find information on the web</a>
+            <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
+                Trigonometric Numbers</a>
         </div>
         <hr style="width: 50%;">
         <form autocomplete="off">
@@ -102,7 +106,9 @@
         <br>
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+tan" target="_blank" rel="noopener"
-                class="btn btn-outline-light">Find information on the web</a>
+                class="btn btn-outline-light m-2">Find information on the web</a>
+            <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
+                Trigonometric Numbers</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
