--- a/fact.html
+++ b/fact.html
@@ -63,7 +63,7 @@
         <div class="my-4">
             <a href="https://www.google.com/search?q=calculate+the+factorial+of+a+number" target="_blank" rel="noopener"
                 class="btn btn-outline-light m-2">Find information on the web</a>
-            <a href="formulas.html#factorials" class="btn btn-outline-light">Popular Factorials</a>
+            <a href="cheatsheet.html#factorials" class="btn btn-outline-light">Popular Factorials</a>
         </div>
     </div>
     <!-- SCRIPTS START -->
