prod: added label in the chaces calculator

--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -91,6 +91,7 @@
                 </tr>
             </tbody>
         </table>
+        <p>Chances:</p>
         <div style="height: 1em !important;">
             <p class="text-warning" id="output">100% for AA</p>
         </div>
