temporarily removed vaccination initiative message

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <!-- NAVBAR START -->
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
-    <div class="alert alert-dismissible fade show m-2 text-center" role="alert"
+    <!-- <div class="alert alert-dismissible fade show m-2 text-center" role="alert"
         style="z-index: 999; background-color: #343A40;">
         Schedule and appointment and <a href="" target="_blank" rel="noopener" id="vacc-promo-link">get vaccinated
             today</a>!
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+    </div> -->
     <div class="dead-center">
         <h1 class="text-white fs-1"><img src="Assets/icon.png" class=" user-select-none logo"
                 style="height: 1em; transform: rotate(180deg);" alt="logo"> MathFlare</h1>
@@ -106,7 +106,7 @@
         console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?", "font-family:consolas; font-size: 20px");
         console.log("%cMathFlare", "color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
         console.log("%cby the way, the curiosity killed the cat you know...", "color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
-        $.getJSON("https://ipgeolocation.abstractapi.com/v1/?api_key=e3bc23053c584ae2bbf332d89bc66f8d", function (data) {
+        /* $.getJSON("https://ipgeolocation.abstractapi.com/v1/?api_key=e3bc23053c584ae2bbf332d89bc66f8d", function (data) {
             const country = data.country;
             console.log(country);
             if (country === 'Greece') {
@@ -142,7 +142,7 @@
             } else {
                 document.querySelector('#vacc-promo-link').removeAttribute('href');
             }
-        });
+        }); */
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
