prod:expanded trigonometric calculator

--- a/trigcalculator.html
+++ b/trigcalculator.html
@@ -110,6 +110,66 @@
             <a href="https://www.mathflare.tk/cheatsheet#trigonometricnums" class="btn btn-outline-light">Popular
                 Trigonometric Numbers</a>
         </div>
+        <hr style="width: 50%;">
+        <form autocomplete="off">
+            <h4 class="text-white">Arcsine</h4>
+            <div class="center-form">
+                <input type="number" id="asina" placeholder="angle&#176;" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form">
+                <input type="submit" id="asincalc" class="btn btn-success btn-lg" value="Calculate Sin">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="asinout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+arcsin" target="_blank" rel="noopener"
+                class="btn btn-outline-light m-2">Find information on the web</a>
+        </div>
+        <hr style="width: 50%;">
+        <form autocomplete="off">
+            <h4 class="text-white">Arccosine</h4>
+            <div class="center-form">
+                <input type="number" id="acosa" placeholder="angle&#176;" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form">
+                <input type="submit" id="acoscalc" class="btn btn-success btn-lg" value="Calculate Cos">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="acosout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+arccos" target="_blank" rel="noopener"
+                class="btn btn-outline-light m-2">Find information on the web</a>
+        </div>
+        <hr style="width: 50%;">
+        <form autocomplete="off">
+            <h4 class="text-white">Arctangent</h4>
+            <div class="center-form">
+                <input type="number" id="atana" placeholder="angle&#176;" class="form-control mb-0" step="0.01" />
+            </div>
+            <br />
+            <div class="center-form">
+                <input type="submit" id="atancalc" class="btn btn-success btn-lg" value="Calculate Tan">
+            </div>
+        </form>
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="atanout"></p>
+        </div>
+        <br>
+        <div class="my-4">
+            <a href="https://www.google.com/search?q=calculate+arctan" target="_blank" rel="noopener"
+                class="btn btn-outline-light m-2">Find information on the web</a>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
