--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -49,20 +49,25 @@
     <h1 class="title text-center mt-5">MathFlare Cheat Sheet</h1>
     <div class="row m-0">
         <div class="col mt-5">
-            <h3 class="text-center">Contents</h3>
-            <div class="list-group position-sticky">
-                <a href="#trigonometricnums"
-                    class="list-group-item list-group-item-dark list-group-item-action">Trigonometric Numbers</a>
-                <a href="#factorials" class="list-group-item list-group-item-dark list-group-item-action">Populas
-                    Factorials</a>
-                <a href="#powoften" class="list-group-item list-group-item-dark list-group-item-action">Powers of
-                    Ten</a>
-                <a href="#powoftenneg" class="list-group-item list-group-item-dark list-group-item-action"><i
-                        class="bi bi-arrow-return-right"></i> Negative</a>
-                <a href="#powoftenpos" class="list-group-item list-group-item-dark list-group-item-action"><i
-                        class="bi bi-arrow-return-right"></i> Positive</a>
-                <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular
-                    Identities</a>
+            <div class="position-sticky" style="top: 10px;">
+                <h3 class="text-center">Contents</h3>
+                <div class="list-group position-sticky">
+                    <a href="#trigonometricnums"
+                        class="list-group-item list-group-item-dark list-group-item-action">Trigonometric Numbers</a>
+                    <a href="#factorials" class="list-group-item list-group-item-dark list-group-item-action">Populas
+                        Factorials</a>
+                    <a href="#powoften" class="list-group-item list-group-item-dark list-group-item-action">Powers of
+                        Ten</a>
+                    <a href="#powoftenneg" class="list-group-item list-group-item-dark list-group-item-action"><i
+                            class="bi bi-arrow-return-right"></i> Negative</a>
+                    <a href="#powoftenpos" class="list-group-item list-group-item-dark list-group-item-action"><i
+                            class="bi bi-arrow-return-right"></i> Positive</a>
+                    <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular
+                        Identities</a>
+                    <a href="#periodictable"
+                        class="list-group-item list-group-item-dark list-group-item-action">Periodic
+                        Table</a>
+                </div>
             </div>
         </div>
         <div class="col-md-9 mt-5 text-center">
@@ -427,6 +432,11 @@
                         </tr>
                     </tbody>
                 </table>
+            </section>
+            <section id="periodictable">
+                <h3>Periodic Table</h3>
+                <img src="Assets/periodic-table.png" alt="periodic table" width="100%" height="100%"
+                    style="border: 1px solid white" />
             </section>
         </div>
     </div>
