prod: made the navbar sticky

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -46,10 +46,10 @@
     <button class="btn btn-danger position-fixed" id="btn-back-to-top"
         style="display: none; bottom: 20px; left: 20px; border-radius: 100%; z-index: 99999;" data-bs-toggle="tooltip"
         data-bs-placement="right" title="Back to Top"><i class="bi bi-arrow-up"></i></button>
-    <h1 class="title text-center mt-5">MathFlare Cheat Sheet</h1>
+    <h1 class="title text-center" style="margin-top: 7.5rem;">MathFlare Cheat Sheet</h1>
     <div class="row m-0">
         <div class="col mt-5">
-            <div class="position-sticky" style="top: 10px;">
+            <div class="position-sticky" style="top: 4.5em;">
                 <h3 class="text-center">Contents</h3>
                 <div class="list-group position-sticky">
                     <a href="#trigonometricnums"
