--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     .catch((err) => console.log('Error: ', err));
             });
         } else {
-            console.log('Service worker is not supported in this browser');
+            console.log('Service worker is not supported in your browser');
         }
     </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
