prod: updated seo tags

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description"
         content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
+        <meta name="twitter:image" content="Assets/logo.png">
     <link rel="canonical" href="https://www.mathflare.tk">
     <link rel="home" href="https://www.mathflare.tk">
     <meta name="theme-color" content="#FFC107">
