beta: swapped top navbar with sidebar

--- a/license.html
+++ b/license.html
@@ -43,7 +43,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <!-- TOS START -->
-    <div class="text-white m-4">
+    <div class="text-white m-4" style="margin-top: 7.5em !important;">
         <h2>Open Source Software License / Notice</h2>
         <br>
         <section id="before-you-read">
