--- a/tos.html
+++ b/tos.html
@@ -43,7 +43,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <!-- TOS START -->
-    <div class="text-white m-4">
+    <div class="text-white m-4" style="margin-top: 7.5em !important;">
         <h2>Terms of Service(ToS)</h2>
         <section id="intro">
             <p>Your privacy is important to us. It is MathFlare&#39;s Co. Ltd. policy to respect your privacy and comply
