prod: fixed navbar links

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         });
+        document.querySelector('#home-link').classList.add('active');
         console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?", "font-family:consolas; font-size: 20px");
         console.log("%cMathFlare", "color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
         console.log("%cby the way, the curiosity killed the cat you know...", "color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
