prod: updated contact page

--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
             <p class=" text-white"><i class="bi bi-lightbulb"></i> Tip: Include your name in the subject of the email
             </p>
             <div class="center-form">
-                <input type="email" id="email" name="email" placeholder="Your email address"
-                    class="form-control mb-0" required />
+                <input type="email" id="email" name="email" placeholder="Your email address" class="form-control mb-0"
+                    required />
             </div>
             <br>
             <div class="center-form">
@@ -67,7 +67,7 @@
             <div class="form-check center-form d-inline-block">
                 <input class="form-check-input" type="checkbox" id="agree-to-tos" required>
                 <label class="form-check-label" for="agree-to-tos">
-                    I have read and agree on the <a href="tos.html">Terms of Service</a>
+                    I have read and agree with the <a href="tos.html">Terms of Service</a>
                 </label>
             </div>
             <div class="button-group my-3">
@@ -76,25 +76,7 @@
             </div>
         </form>
         <p id="user-message"></p>
-        <div class="container-sm">
-            <p>While you are writing us an email, let us tell you a little bit about our website, MathFlare (previously
-                known as "Liquid Geometry")!
-                So the pro`ject started as a desktop application using
-                <a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank">C#</a> and it
-                later
-                evolved to a <a href="https://en.wikipedia.org/wiki/Front-end_web_development" target="_blank">front-end
-                    web app</a> (like a pokemon) using <a href="https://en.wikipedia.org/wiki/JavaScript"
-                    target="_blank">JavaScript</a>, <a href="https://en.wikipedia.org/wiki/HTML"
-                    target="_blank">HTML</a> and <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">CSS</a>.
-                The website went
-                through many redesigns and <a href="https://en.wikipedia.org/wiki/Code_refactoring"
-                    target="_blank">refactorings</a> but is has finally came up to this <a
-                    href="https://getbootstrap.com/" target="_blank">Bootstrap 5</a> and <a
-                    href="https://en.wikipedia.org/wiki/JQuery" target="_blank">JQuery</a> masterpiece!
-            </p>
-            <p>Spoiler Alert! We are eventually going to recreate the site using the <a
-                    href="https://en.wikipedia.org/wiki/ASP.NET_MVC" target="_blank">ASP.NET MVC Framework</a></p>
-        </div>
+        <p><i class="bi bi-lightning"></i> Didn't work? why don't you send us an <a href="mailto:mathflare@pm.me" target="_blank" rel="noopener">email</a>?</p>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
