--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -435,8 +435,9 @@
             </section>
             <section id="periodictable">
                 <h3>Periodic Table</h3>
-                <img src="Assets/periodic-table.png" alt="periodic table" width="100%" height="100%"
-                    style="border: 1px solid white" />
+                <a href="Assets/periodic-table.png" target="_parent">
+                    <img src="Assets/periodic-table.png" alt="periodic table" width="100%" height="100%"
+                        style="border: 1px solid white" /></a>
             </section>
         </div>
     </div>
