--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-    <!-- MAIL -->
-    <meta name="yandex-verification" content="f86171133514f762" />
     <!-- SEO -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +24,7 @@
     <meta name="twitter:title" content="MathFlare" />
     <meta name="twitter:description"
         content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-        <meta name="twitter:image" content="Assets/logo.png">
+    <meta name="twitter:image" content="Assets/logo.png">
     <link rel="canonical" href="https://www.mathflare.tk">
     <link rel="home" href="https://www.mathflare.tk">
     <meta name="theme-color" content="#FFC107">
@@ -110,7 +108,9 @@
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
             return new bootstrap.Tooltip(tooltipTriggerEl)
         });
-        document.querySelector('#home-link').classList.add('active');
+        window.addEventListener('load', () => {
+            document.querySelector('#home-link').classList.add('active');
+        });
         console.log("%cHello Sir looking around in the console! Insted of hacking, what about you contribute to MathFlare on GitHub?", "font-family:consolas; font-size: 20px");
         console.log("%cMathFlare", "color: DodgerBlue; font-weight: 600; font-family:consolas; font-size: 40px");
         console.log("%cby the way, the curiosity killed the cat you know...", "color: PaleGreen; font-weight: 600; font-family:consolas; font-size: 20px");
