--- a/area.html
+++ b/area.html
@@ -164,8 +164,8 @@
             </div>
             <br>
             <div class="center-form">
-                <input type="number" id="trapb" placeholder="large segment" class="form-control mb-0" step="0.01 min="
-                    0"" />
+                <input type="number" id="trapb" placeholder="large segment" class="form-control mb-0" step="0.01"
+                    min="0" />
             </div>
             <br>
             <div class="center-form">
